--- a/src/App.css
+++ b/src/App.css
@@ -44,14 +44,14 @@ input[type="text"] {
 }
 
 #clear {
-    grid-column: 1/3;
-    grid-row: 1;
+    /* grid-column: 1/3; */
+    /* grid-row: 1; */
     color: #262834;
 }
 
 #result {
-    grid-column: 3/5;
-    grid-row: 5;
+    /* grid-column: 3/5; */
+    /* grid-row: 5; */
     color: #262834;
 }
 
